Implemented ComponentInstance.allComponents